--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage ('checkout'){
             steps {
-                git branch: 'main', url: 'https://github.com/ishaqmdgcp/gcp-devops.git'
+                git branch: 'main', url: 'https://github.com/Mounika113/GCP_DevOps.git'
             }
         }
       
@@ -36,14 +36,22 @@ pipeline {
 		 }
 	 }
 				  
-	stage('Terraform Action') {
+	stage('Terraform Plan') {
 		 steps {  
 			  dir('VM-VPC')
 			 {
-                sh 'terraform $TF_ACTIONS $TF_APPROVE'
+                sh 'terraform plan'
 			 }
 		 }
 	}
-                             
+	    
+        stage('Terraform Apply') {
+		 steps {  
+			  dir('VM-VPC')
+			 {
+                sh 'terraform apply'
+			 }
+		 }
+	 }                     
 }
 }
