--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage ('checkout'){
             steps {
-                git branch: 'main', url: 'https://github.com/Mounika113/GCP_DevOps.git'
+                git branch: 'master', url: 'https://github.com/Mounika113/GCP_DevOps.git'
             }
         }
       
